add_module-12_hw_vvvv

--- a/webpack-starter-kit-master/src/index.html
+++ b/webpack-starter-kit-master/src/index.html
@@ -10,7 +10,7 @@
     <div class="container">
     <form id="country__form" class="country__form">
       <label class="country__label" id="country__label" for="fname">Введите название страны:</label>
-      <input class="country__input" type="text" id="country__input" name="name">
+      <input class="country__input" type="text" autocomplete="off" id="country__input" name="name">
     </form>
     <ul class="country__list" id="country__list">
     </ul>
